# crifx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  push.yml
crifx/: __init__.py  cli.py  config_parser.py  dir_layout_parsing.py  git_manager.py  problemset_parser.py  problemset_parsing.py  report_writer.py  report_writing.py  version.py
crifx/contest_objects/: __init__.py  author.py  judge.py  judgement.py  problem.py  problem_test_case.py  problemset.py  programming_language.py  submission.py
crifx/report_objects/: __init__.py  review_status.py
examples/example_problemset/: crifx.toml
examples/example_problemset/.crifx/: crifx-report.tex
examples/example_problemset/addtwonumbers/: crifx-problem-status.toml
examples/example_problemset/addtwonumbers/submissions/accepted/: add_two.py  add_two_jd.py
examples/example_problemset/helloworld/: crifx-problem-status.toml  problem.yaml
examples/example_problemset/helloworld/data/secret/: 001-finn.ans  001-finn.desc  005-mrthompson.ans  005-mrthompson.desc  005-mrthompson.in  015-longest.ans
examples/example_problemset/helloworld/input_validators/: validator.ctd
examples/example_problemset/helloworld/problem_statement/: problem.tex
examples/example_problemset/helloworld/submissions/accepted/: hello.py  hello_finn.java
examples/example_problemset/helloworld/submissions/wrong_answer/: lowercase_only.py
scripts/: make_doc_images.sh
tests/: __init__.py  conftest.py  test_dir_parsing.py  test_examples.py  test_git_manager.py  test_problem_object.py  test_problemset_parsing.py  test_programming_language.py  test_write_report.py
tests/scenarios/sample_contest_1/: crifx.toml
tests/scenarios/sample_contest_1/no_data_yet/submissions/accepted/: input_printer.py
tests/scenarios/sample_contest_1/no_data_yet/submissions/time_limit_exceeded/: infinite_loop.py
tests/scenarios/sample_contest_1/problem_a/: crifx-problem-status.toml
tests/scenarios/sample_contest_1/problem_a/data/secret/: 2.desc  2.in
tests/scenarios/sample_contest_1/problem_a/submissions/accepted/: hello_world.java
tests/scenarios/sample_contest_1/problem_a/submissions/wrong_answer/: goodbye_world.py
tests/scratch/: README.md
